_scss/_content.scss
.wrapper {
    margin-right: 1.125rem;
    margin-left: 1.125rem;
}

h1.intro-ext {
    text-align: right;
    // padding: 0 0 1.5rem 0;
}

.side img {
    width: 80%;
    margin-right: -1.09rem;
}

p.about-ext {
    text-align: left;
    font: 300 1.25rem/2.125rem $font-primary;
    padding: 2.5rem 0 2.5rem 0;
    color: darken($navigationLightBg, 60%)
}

.social-grid-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(1.875rem, 1fr));
    grid-gap: 0.25rem;
    text-align: center;
    margin: 0 2.5rem 0 2.5rem;
    padding-bottom: 2.5rem;
}

.fab {
    font-size: 2rem;
}

.fa-twitter,
.fa-instagram,
.fa-behance {
    color: darken($navigationLightBg, 60%)
}

.fa-twitter:hover {
    color: $twitter;
    transition: 0.2s;
}

.fa-instagram:hover {
    color: $instagram;
    transition: 0.2s;
}

.fa-behance:hover {
    color: $behance;
    transition: 0.2s;
}

